Fixed dark mode toggle

--- a/public/assets/css/black-dashboard.css
+++ b/public/assets/css/black-dashboard.css
@@ -18091,7 +18091,7 @@ table.tablesorter thead tr .headerSortDown {
   z-index: 1031;
   border-radius: 8px 0 0 8px;
   text-align: center;
-  top: 130px;
+  top: 38px;
 }
 
 .fixed-plugin li > a,
